--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -14,7 +14,8 @@
    "outputs": [],
    "source": [
     "!pip install -r requirements.txt\n",
-    "!pip install git+https://github.com/huggingface/optimum.git@main \"onnx\" \"onnxruntime>=1.9.0\" \"datasets>=1.2.1\" \"protobuf==3.20.1\""
+    "!pip install git+https://github.com/huggingface/optimum.git@main \"onnx\" \"onnxruntime>=1.9.0\" \"datasets>=1.2.1\" \"protobuf==3.20.1\"\n",
+    "!pip install evaluate sklearn"
    ]
   },
   {
@@ -28,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,15 +42,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Converting the model to onnx"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Downloading: 100%|██████████| 6.59k/6.59k [00:00<00:00, 4.28MB/s]\n"
+      "Downloading: 100%|██████████| 5.83k/5.83k [00:00<00:00, 2.86MB/s]\n",
+      "Downloading: 100%|██████████| 319/319 [00:00<00:00, 312kB/s]\n",
+      "Downloading: 100%|██████████| 226k/226k [00:00<00:00, 878kB/s] \n",
+      "Downloading: 100%|██████████| 455k/455k [00:00<00:00, 1.18MB/s]\n",
+      "Downloading: 100%|██████████| 5.70k/5.70k [00:00<00:00, 5.98MB/s]\n",
+      "Downloading: 100%|██████████| 256M/256M [00:05<00:00, 47.7MB/s] \n"
      ]
     },
     {
@@ -57,13 +70,12 @@
       "text/plain": [
        "('onnx/tokenizer_config.json',\n",
        " 'onnx/special_tokens_map.json',\n",
-       " 'onnx/vocab.json',\n",
-       " 'onnx/merges.txt',\n",
+       " 'onnx/vocab.txt',\n",
        " 'onnx/added_tokens.json',\n",
        " 'onnx/tokenizer.json')"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -82,8 +94,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Configuring static quantization"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,8 +115,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Running Calibration of quantization ranges"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -107,13 +133,14 @@
       "Using custom data configuration default\n",
       "Reusing dataset banking77 (/home/ubuntu/.cache/huggingface/datasets/banking77/default/1.1.0/aec0289529599d4572d76ab00c8944cb84f88410ad0c9e7da26189d31f62a55b)\n",
       "Loading cached shuffled indices for dataset at /home/ubuntu/.cache/huggingface/datasets/banking77/default/1.1.0/aec0289529599d4572d76ab00c8944cb84f88410ad0c9e7da26189d31f62a55b/cache-879d5f95a9fbe7e7.arrow\n",
-      "100%|██████████| 1/1 [00:00<00:00, 54.10ba/s]\n"
+      "100%|██████████| 1/1 [00:00<00:00, 68.60ba/s]\n"
      ]
     }
    ],
    "source": [
+    "import os\n",
     "from functools import partial\n",
-    "\n",
+    "from optimum.onnxruntime.configuration import AutoCalibrationConfig\n",
     "\n",
     "def preprocess_fn(ex, tokenizer):\n",
     "    return tokenizer(ex[\"text\"])\n",
@@ -124,17 +151,9 @@
     "    preprocess_function=partial(preprocess_fn, tokenizer=quantizer.tokenizer),\n",
     "    num_samples=200,\n",
     "    dataset_split=\"train\",\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from optimum.onnxruntime.configuration import AutoCalibrationConfig\n",
-    "import os\n",
+    ")\n",
+    "\n",
+    "\n",
     "# Create the calibration configuration containing the parameters related to calibration.\n",
     "calibration_config = AutoCalibrationConfig.minmax(calibration_dataset)\n",
     "# Perform the calibration step: computes the activations quantization ranges\n",
@@ -149,8 +168,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Running quantization with calibrated ranges"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +185,7 @@
        "PosixPath('onnx/model-quantized.onnx')"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -176,15 +202,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model file size: 313.54 MB\n",
-      "Quantized Model file size: 192.03 MB\n"
+      "Model file size: 255.68 MB\n",
+      "Quantized Model file size: 134.16 MB\n"
      ]
     }
    ],
@@ -200,8 +226,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Test quantized model"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,16 +248,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'label': 'top_up_by_bank_transfer_charge', 'score': 0.13707876205444336}]"
+       "[{'label': 'transfer_fee_charged', 'score': 0.3978312015533447}]"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -242,23 +275,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "!pip install evaluate sklearn"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using custom data configuration default\n",
+      "Reusing dataset banking77 (/home/ubuntu/.cache/huggingface/datasets/banking77/default/1.1.0/aec0289529599d4572d76ab00c8944cb84f88410ad0c9e7da26189d31f62a55b)\n",
+      "Couldn't find a directory or a metric named 'accuracy' in this version. It was picked from the master branch on github instead.\n"
+     ]
+    }
+   ],
    "source": [
     "from transformers import pipeline\n",
     "import evaluate\n",
-    "from evaluate import evaluator\n",
     "from datasets import load_dataset\n",
+    "\n",
     "\n",
     "test_dataset= load_dataset(dataset_id,split=\"test\")\n",
     "metric = evaluate.load(\"accuracy\")\n",
@@ -269,7 +303,11 @@
     "        return {\"pred\": pipe.model.config.label2id[onnx[0][label_column]] ,\"ref\": sample[label_column]}\n",
     "\n",
     "    res = test_dataset.map(eval)\n",
-    "    return metric.compute(references=res[\"ref\"], predictions=res[\"pred\"])\n"
+    "    return metric.compute(references=res[\"ref\"], predictions=res[\"pred\"])\n",
+    "\n",
+    "pipe = pipeline(\"text-classification\",model=model_id)\n",
+    "\n",
+    "evaluate_model(pipe,test_dataset,metric)"
    ]
   },
   {
@@ -281,23 +319,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 3080/3080 [01:01<00:00, 49.79ex/s]\n"
+      "100%|██████████| 3080/3080 [00:59<00:00, 51.70ex/s]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{'accuracy': 0.8961038961038961}"
+       "{'accuracy': 0.3012987012987013}"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -305,7 +343,8 @@
    "source": [
     "pipe = pipeline(\"text-classification\",model=model_id)\n",
     "\n",
-    "evaluate_model(pipe,test_dataset,metric)"
+    "evaluate_model(pipe,test_dataset,metric)\n",
+    "\n"
    ]
   },
   {
@@ -317,24 +356,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Parameter 'function'=<function evaluate_model.<locals>.eval at 0x7ff964f0edc0> of the transform datasets.arrow_dataset.Dataset._map_single couldn't be hashed properly, a random hash was used instead. Make sure your transforms and parameters are serializable with pickle or dill for the dataset fingerprinting and caching to work. If you reuse this transform, the caching mechanism will consider it to be different from the previous calls and recompute everything. This warning is only showed once. Subsequent hashing failures won't be showed.\n",
-      "100%|██████████| 3080/3080 [00:18<00:00, 169.40ex/s]\n"
+      "100%|██████████| 3080/3080 [00:17<00:00, 179.52ex/s]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{'accuracy': 0.8662337662337662}"
+       "{'accuracy': 0.2837662337662338}"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -344,11 +382,153 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Optimize the quantized model"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2022-06-02 13:11:28.726616837 [W:onnxruntime:, inference_session.cc:1546 Initialize] Serializing optimized model with Graph Optimization level greater than ORT_ENABLE_EXTENDED and the NchwcTransformer enabled. The generated model may contain hardware specific optimizations, and should only be used in the same environment the model was optimized in.\n",
+      "Model producer not matched: Expect pytorch, Got onnx.quantize 0.1.0. Please specify correct --model_type parameter.\n",
+      "Attention not fused\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "PosixPath('onnx/model-optimized.onnx')"
+      ]
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from optimum.onnxruntime import ORTOptimizer\n",
+    "from optimum.onnxruntime.configuration import OptimizationConfig\n",
+    "\n",
+    "# create ORTOptimizer and define optimization configuration\n",
+    "optimizer = ORTOptimizer.from_pretrained(model_id, feature=task)\n",
+    "optimization_config = OptimizationConfig(optimization_level=99) # enable all optimizations\n",
+    "\n",
+    "# apply the optimization configuration to the model\n",
+    "optimizer.export(\n",
+    "    onnx_model_path=onnx_path / \"model-quantized.onnx\",\n",
+    "    onnx_optimized_model_output_path=onnx_path / \"model-optimized.onnx\",\n",
+    "    optimization_config=optimization_config,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from optimum.onnxruntime import ORTModelForSequenceClassification\n",
+    "from transformers import pipeline, AutoTokenizer\n",
+    "\n",
+    "model = ORTModelForSequenceClassification.from_pretrained(onnx_path,file_name=\"model-optimized.onnx\")\n",
+    "\n",
+    "optimized_clx = pipeline(\"text-classification\",model=model, tokenizer=quantizer.tokenizer)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "But first, let’s extend our context and question to a more meaningful sequence length of 128."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "payload=\"What do I need to do to get my new card which I have requested 2 weeks ago?\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "128"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "payload=\"Hello my name is Philipp. I am getting in touch with you because i didn't get a response from you. What do I need to do to get my new card which I have requested 2 weeks ago? Please help me and answer this email in the next 7 days. Best regards and have a nice weekend \"*2\n",
+    "len(tokenizer(payload)[\"input_ids\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Vanilla model: P95 latency (ms) - 46.81796969998686; Average latency (ms) - 45.68 +\\- 1.95;\n",
+      "Quantized model: P95 latency (ms) - 38.94509134897817; Average latency (ms) - 26.37 +\\- 4.91;\n",
+      "Optimized model: P95 latency (ms) - 24.78116525007863; Average latency (ms) - 24.40 +\\- 0.25;\n",
+      "Improvement through quantization: 1.73x\n",
+      "Improvement through optimization: 1.87x\n"
+     ]
+    }
+   ],
+   "source": [
+    "from time import perf_counter\n",
+    "import numpy as np \n",
+    "\n",
+    "def measure_latency(pipe):\n",
+    "    latencies = []\n",
+    "    # warm up\n",
+    "    for _ in range(10):\n",
+    "        _ = pipe(payload)\n",
+    "    # Timed run\n",
+    "    for _ in range(1000):\n",
+    "        start_time = perf_counter()\n",
+    "        _ =  pipe(payload)\n",
+    "        latency = perf_counter() - start_time\n",
+    "        latencies.append(latency)\n",
+    "    # Compute run statistics\n",
+    "    time_avg_ms = 1000 * np.mean(latencies)\n",
+    "    time_std_ms = 1000 * np.std(latencies)\n",
+    "    time_p95_ms = 1000 * np.percentile(latencies,95)\n",
+    "    return f\"P95 latency (ms) - {time_p95_ms}; Average latency (ms) - {time_avg_ms:.2f} +\\- {time_std_ms:.2f};\", time_avg_ms\n",
+    "\n",
+    "\n",
+    "vanilla_model=measure_latency(pipe)\n",
+    "quantized_model=measure_latency(clx)\n",
+    "optimized_model=measure_latency(optimized_clx)\n",
+    "\n",
+    "print(f\"Vanilla model: {vanilla_model[0]}\")\n",
+    "print(f\"Quantized model: {quantized_model[0]}\")\n",
+    "print(f\"Optimized model: {optimized_model[0]}\")\n",
+    "print(f\"Improvement through quantization: {round(vanilla_model[1]/quantized_model[1],2)}x\")\n",
+    "print(f\"Improvement through optimization: {round(vanilla_model[1]/optimized_model[1],2)}x\")"
+   ]
   }
  ],
  "metadata": {
