--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,19 +50,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Downloading: 100%|██████████| 5.83k/5.83k [00:00<00:00, 2.86MB/s]\n",
-      "Downloading: 100%|██████████| 319/319 [00:00<00:00, 312kB/s]\n",
-      "Downloading: 100%|██████████| 226k/226k [00:00<00:00, 878kB/s] \n",
-      "Downloading: 100%|██████████| 455k/455k [00:00<00:00, 1.18MB/s]\n",
-      "Downloading: 100%|██████████| 5.70k/5.70k [00:00<00:00, 5.98MB/s]\n",
-      "Downloading: 100%|██████████| 256M/256M [00:05<00:00, 47.7MB/s] \n"
+      "/home/ubuntu/miniconda3/lib/python3.9/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
+      "Downloading: 100%|██████████| 6.59k/6.59k [00:00<00:00, 6.05MB/s]\n"
      ]
     },
     {
@@ -70,12 +67,13 @@
       "text/plain": [
        "('onnx/tokenizer_config.json',\n",
        " 'onnx/special_tokens_map.json',\n",
-       " 'onnx/vocab.txt',\n",
+       " 'onnx/vocab.json',\n",
+       " 'onnx/merges.txt',\n",
        " 'onnx/added_tokens.json',\n",
        " 'onnx/tokenizer.json')"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -102,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,21 +121,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using custom data configuration default\n",
-      "Reusing dataset banking77 (/home/ubuntu/.cache/huggingface/datasets/banking77/default/1.1.0/aec0289529599d4572d76ab00c8944cb84f88410ad0c9e7da26189d31f62a55b)\n",
-      "Loading cached shuffled indices for dataset at /home/ubuntu/.cache/huggingface/datasets/banking77/default/1.1.0/aec0289529599d4572d76ab00c8944cb84f88410ad0c9e7da26189d31f62a55b/cache-879d5f95a9fbe7e7.arrow\n",
-      "100%|██████████| 1/1 [00:00<00:00, 68.60ba/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "%%capture\n",
     "import os\n",
     "from functools import partial\n",
     "from optimum.onnxruntime.configuration import AutoCalibrationConfig\n",
@@ -176,7 +164,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from optimum.onnxruntime.preprocessors import QuantizationPreprocessor\n",
+    "from optimum.onnxruntime.preprocessors.passes import (\n",
+    "    ExcludeGeLUNodes,\n",
+    "    ExcludeLayerNormNodes,\n",
+    "    ExcludeNodeAfter,\n",
+    "    ExcludeNodeFollowedBy,\n",
+    ")\n",
+    "\n",
+    "# Create a quantization preprocessor to determine the nodes to exclude\n",
+    "quantization_preprocessor = QuantizationPreprocessor()\n",
+    "\n",
+    "# Exclude the nodes constituting LayerNorm\n",
+    "quantization_preprocessor.register_pass(ExcludeLayerNormNodes())\n",
+    "# Exclude the nodes constituting GELU\n",
+    "quantization_preprocessor.register_pass(ExcludeGeLUNodes())\n",
+    "# Exclude the residual connection Add nodes\n",
+    "quantization_preprocessor.register_pass(ExcludeNodeAfter(\"Add\", \"Add\"))\n",
+    "# Exclude the Add nodes following the Gather operator\n",
+    "quantization_preprocessor.register_pass(ExcludeNodeAfter(\"Gather\", \"Add\"))\n",
+    "# Exclude the Add nodes followed by the Softmax operator\n",
+    "quantization_preprocessor.register_pass(ExcludeNodeFollowedBy(\"Add\", \"Softmax\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +202,7 @@
        "PosixPath('onnx/model-quantized.onnx')"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -197,20 +214,21 @@
     "    onnx_quantized_model_output_path=onnx_path / \"model-quantized.onnx\",\n",
     "    calibration_tensors_range=ranges,\n",
     "    quantization_config=qconfig,\n",
+    "    # preprocessor=quantization_preprocessor,\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model file size: 255.68 MB\n",
-      "Quantized Model file size: 134.16 MB\n"
+      "Model file size: 313.54 MB\n",
+      "Quantized Model file size: 192.03 MB\n"
      ]
     }
    ],
@@ -234,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,16 +266,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'label': 'transfer_fee_charged', 'score': 0.3978312015533447}]"
+       "[{'label': 'top_up_by_bank_transfer_charge', 'score': 0.13707876205444336}]"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -275,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -284,8 +302,19 @@
      "text": [
       "Using custom data configuration default\n",
       "Reusing dataset banking77 (/home/ubuntu/.cache/huggingface/datasets/banking77/default/1.1.0/aec0289529599d4572d76ab00c8944cb84f88410ad0c9e7da26189d31f62a55b)\n",
-      "Couldn't find a directory or a metric named 'accuracy' in this version. It was picked from the master branch on github instead.\n"
+      "Couldn't find a directory or a metric named 'accuracy' in this version. It was picked from the master branch on github instead.\n",
+      "100%|██████████| 3080/3080 [00:59<00:00, 52.15ex/s]\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'accuracy': 0.8961038961038961}"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -303,11 +332,7 @@
     "        return {\"pred\": pipe.model.config.label2id[onnx[0][label_column]] ,\"ref\": sample[label_column]}\n",
     "\n",
     "    res = test_dataset.map(eval)\n",
-    "    return metric.compute(references=res[\"ref\"], predictions=res[\"pred\"])\n",
-    "\n",
-    "pipe = pipeline(\"text-classification\",model=model_id)\n",
-    "\n",
-    "evaluate_model(pipe,test_dataset,metric)"
+    "    return metric.compute(references=res[\"ref\"], predictions=res[\"pred\"])"
    ]
   },
   {
@@ -319,23 +344,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 3080/3080 [00:59<00:00, 51.70ex/s]\n"
+      "100%|██████████| 3080/3080 [00:59<00:00, 51.38ex/s]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{'accuracy': 0.3012987012987013}"
+       "{'accuracy': 0.8961038961038961}"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -356,23 +381,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 3080/3080 [00:17<00:00, 179.52ex/s]\n"
+      "Parameter 'function'=<function evaluate_model.<locals>.eval at 0x7f0aba439a60> of the transform datasets.arrow_dataset.Dataset._map_single couldn't be hashed properly, a random hash was used instead. Make sure your transforms and parameters are serializable with pickle or dill for the dataset fingerprinting and caching to work. If you reuse this transform, the caching mechanism will consider it to be different from the previous calls and recompute everything. This warning is only showed once. Subsequent hashing failures won't be showed.\n",
+      "100%|██████████| 3080/3080 [00:15<00:00, 197.19ex/s]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{'accuracy': 0.2837662337662338}"
+       "{'accuracy': 0.8662337662337662}"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -390,14 +416,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-06-02 13:11:28.726616837 [W:onnxruntime:, inference_session.cc:1546 Initialize] Serializing optimized model with Graph Optimization level greater than ORT_ENABLE_EXTENDED and the NchwcTransformer enabled. The generated model may contain hardware specific optimizations, and should only be used in the same environment the model was optimized in.\n",
+      "2022-06-02 13:31:32.343331561 [W:onnxruntime:, inference_session.cc:1546 Initialize] Serializing optimized model with Graph Optimization level greater than ORT_ENABLE_EXTENDED and the NchwcTransformer enabled. The generated model may contain hardware specific optimizations, and should only be used in the same environment the model was optimized in.\n",
       "Model producer not matched: Expect pytorch, Got onnx.quantize 0.1.0. Please specify correct --model_type parameter.\n",
       "Attention not fused\n"
      ]
@@ -408,7 +434,7 @@
        "PosixPath('onnx/model-optimized.onnx')"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -431,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -452,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -461,16 +487,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "128"
+       "127"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -482,18 +508,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Vanilla model: P95 latency (ms) - 46.81796969998686; Average latency (ms) - 45.68 +\\- 1.95;\n",
-      "Quantized model: P95 latency (ms) - 38.94509134897817; Average latency (ms) - 26.37 +\\- 4.91;\n",
-      "Optimized model: P95 latency (ms) - 24.78116525007863; Average latency (ms) - 24.40 +\\- 0.25;\n",
-      "Improvement through quantization: 1.73x\n",
-      "Improvement through optimization: 1.87x\n"
+      "Vanilla model: P95 latency (ms) - 66.20852575069875; Average latency (ms) - 56.69 +\\- 9.12;\n",
+      "Quantized model: P95 latency (ms) - 24.14308940024057; Average latency (ms) - 23.89 +\\- 0.34;\n",
+      "Optimized model: P95 latency (ms) - 23.938274949250626; Average latency (ms) - 23.73 +\\- 0.65;\n",
+      "Improvement through quantization: 2.37x\n",
+      "Improvement through optimization: 2.39x\n"
      ]
     }
    ],
@@ -507,7 +533,7 @@
     "    for _ in range(10):\n",
     "        _ = pipe(payload)\n",
     "    # Timed run\n",
-    "    for _ in range(1000):\n",
+    "    for _ in range(300):\n",
     "        start_time = perf_counter()\n",
     "        _ =  pipe(payload)\n",
     "        latency = perf_counter() - start_time\n",
