--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -60,14 +60,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Downloading: 100%|██████████| 5.81k/5.81k [00:00<00:00, 4.78MB/s]\n"
+      "Downloading: 100%|██████████| 5.81k/5.81k [00:00<00:00, 4.98MB/s]\n"
      ]
     },
     {
@@ -80,7 +80,7 @@
        " 'onnx/tokenizer.json')"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,17 +152,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "WARNING:datasets.builder:Using custom data configuration default\n",
-      "WARNING:datasets.builder:Reusing dataset banking77 (/home/ubuntu/.cache/huggingface/datasets/banking77/default/1.1.0/aec0289529599d4572d76ab00c8944cb84f88410ad0c9e7da26189d31f62a55b)\n",
-      "WARNING:datasets.arrow_dataset:Loading cached shuffled indices for dataset at /home/ubuntu/.cache/huggingface/datasets/banking77/default/1.1.0/aec0289529599d4572d76ab00c8944cb84f88410ad0c9e7da26189d31f62a55b/cache-879d5f95a9fbe7e7.arrow\n",
-      "WARNING:datasets.arrow_dataset:Loading cached processed dataset at /home/ubuntu/.cache/huggingface/datasets/banking77/default/1.1.0/aec0289529599d4572d76ab00c8944cb84f88410ad0c9e7da26189d31f62a55b/cache-4c650534707f1251.arrow\n"
+      "Using custom data configuration default\n",
+      "Reusing dataset banking77 (/home/ubuntu/.cache/huggingface/datasets/banking77/default/1.1.0/aec0289529599d4572d76ab00c8944cb84f88410ad0c9e7da26189d31f62a55b)\n",
+      "Loading cached shuffled indices for dataset at /home/ubuntu/.cache/huggingface/datasets/banking77/default/1.1.0/aec0289529599d4572d76ab00c8944cb84f88410ad0c9e7da26189d31f62a55b/cache-879d5f95a9fbe7e7.arrow\n",
+      "100%|██████████| 1/1 [00:00<00:00,  5.93ba/s]\n"
      ]
     },
     {
@@ -186,9 +186,9 @@
       "Collecting tensor data and making histogram ...\n",
       "Collecting tensor data and making histogram ...\n",
       "Finding optimal threshold for each tensor using percentile algorithm ...\n",
-      "Number of tensors : 294\n",
+      "Number of tensors : 218\n",
       "Number of histogram bins : 2048\n",
-      "Percentile : (0.00486341154874026,99.99513658845126)\n"
+      "Percentile : (0.00760919092822121,99.99239080907178)\n"
      ]
     }
    ],
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +250,7 @@
        "PosixPath('onnx/model-quantized.onnx')"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -315,9 +315,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'label': 'exchange_rate', 'score': 0.9802021384239197}]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from optimum.onnxruntime import ORTModelForSequenceClassification\n",
     "from transformers import pipeline, AutoTokenizer\n",
@@ -341,16 +352,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "WARNING:datasets.builder:Using custom data configuration default\n",
-      "WARNING:datasets.builder:Reusing dataset banking77 (/home/ubuntu/.cache/huggingface/datasets/banking77/default/1.1.0/aec0289529599d4572d76ab00c8944cb84f88410ad0c9e7da26189d31f62a55b)\n",
-      "WARNING:evaluate.loading:Couldn't find a directory or a metric named 'accuracy' in this version. It was picked from the master branch on github instead.\n"
+      "Using custom data configuration default\n",
+      "Reusing dataset banking77 (/home/ubuntu/.cache/huggingface/datasets/banking77/default/1.1.0/aec0289529599d4572d76ab00c8944cb84f88410ad0c9e7da26189d31f62a55b)\n",
+      "Couldn't find a directory or a metric named 'accuracy' in this version. It was picked from the master branch on github instead.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'accuracy': 0.9224025974025974}\n"
      ]
     }
    ],
@@ -370,19 +388,28 @@
     "    label_mapping=model.config.label2id,\n",
     "    strategy=\"simple\",\n",
     ")\n",
-    "print(results)\n",
-    "b"
+    "print(results)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Vanilla model: 92.5%\n",
+      "Quantized model: 92.24%\n",
+      "The quantized model achieves 99.72% accuracy of the fp32 model\n"
+     ]
+    }
+   ],
    "source": [
     "print(f\"Vanilla model: 92.5%\")\n",
-    "print(f\"Quantized model: {results['accuracy']*100.2f}%\")\n",
-    "print(f\"The quantized model achieves {round(0.925/results['accuracy'],2)}% accuracy of the fp32 model\")"
+    "print(f\"Quantized model: {results['accuracy']*100:.2f}%\")\n",
+    "print(f\"The quantized model achieves {round(results['accuracy']/0.925,4)*100:.2f}% accuracy of the fp32 model\")"
    ]
   },
   {
@@ -395,9 +422,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Payload sequence length: 128\n",
+      "Vanilla model: P95 latency (ms) - 86.7772593483096; Average latency (ms) - 62.55 +\\- 8.66;\n",
+      "Quantized model: P95 latency (ms) - 27.027633551188046; Average latency (ms) - 26.17 +\\- 0.66;\n",
+      "Improvement through quantization: 2.39x\n"
+     ]
+    }
+   ],
    "source": [
     "from time import perf_counter\n",
     "import numpy as np \n",
@@ -473,16 +511,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/ubuntu/miniconda3/lib/python3.9/site-packages/huggingface_hub/hf_api.py:79: FutureWarning: `name` and `organization` input arguments are deprecated and will be removed in v0.8. Pass `repo_id` instead.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "from transformers import AutoTokenizer\n",
     "from optimum.onnxruntime import ORTModelForSequenceClassification\n",
     "\n",
     "tmp_store_directory=\"onnx_hub_repo\"\n",
     "repository_id=\"quantized-distilbert-banking77\"\n",
+    "model_file_name=\"model-quantized.onnx\"\n",
     "\n",
+    "model.latest_model_name=model_file_name # workaround for PR #214\n",
     "model.save_pretrained(tmp_store_directory)\n",
     "quantizer.tokenizer.save_pretrained(tmp_store_directory)\n",
     "\n",
@@ -503,18 +552,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Downloading: 100%|██████████| 5.78k/5.78k [00:00<00:00, 3.48MB/s]\n",
+      "Downloading: 100%|██████████| 141M/141M [00:01<00:00, 112MB/s] \n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[{'label': 'exchange_rate', 'score': 0.9802021384239197}]"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from optimum.onnxruntime import ORTModelForSequenceClassification\n",
     "from transformers import pipeline, AutoTokenizer\n",
     "\n",
-    "model = ORTModelForSequenceClassification.from_pretrained(\"quantized-distilbert-banking77\")\n",
-    "tokenizer = AutoTokenizer.from_pretrained(\"quantized-distilbert-banking77\")\n",
+    "model = ORTModelForSequenceClassification.from_pretrained(\"philschmid/quantized-distilbert-banking77\")\n",
+    "tokenizer = AutoTokenizer.from_pretrained(\"philschmid/quantized-distilbert-banking77\")\n",
     "\n",
     "remote_clx = pipeline(\"text-classification\",model=model, tokenizer=tokenizer)\n",
     "\n",
+    "remote_clx(\"What is the exchange rate like on this app?\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5.5 ms ± 338 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit\n",
     "remote_clx(\"What is the exchange rate like on this app?\")"
    ]
   },
