--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -475,7 +475,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We managed to accelerate our model latency from 117.61ms to 64.94ms or roughly 2x while keeping 99.61% of the accuracy. "
+    "We managed to accelerate our model latency from 117.61ms to 64.94ms or roughly 2x while keeping 99.61% of the accuracy. \n",
+    "\n",
+    "![performance](assets/performance.png)"
    ]
   },
   {
